<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.UserProfileFragment">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp"
        android:background="@color/gray">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="My profile"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>
        <ImageButton
            android:id="@+id/editBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_edit_24"
            android:layout_alignParentEnd="true"
            android:background="@null"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true">


        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray"
            android:paddingTop="10dp"
            android:hint="Email"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14dp" />
        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray"
            android:paddingTop="10dp"
            android:hint="Password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14dp" />
        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray"
            android:paddingTop="10dp"
            android:hint="Name"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14dp" />
        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray"
            android:paddingTop="10dp"
            android:hint="Phone Number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14dp" />
        <TextView
            android:id="@+id/tvAccountType"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray"
            android:paddingTop="10dp"
            android:hint="accountType"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14dp" />
        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray"
            android:paddingTop="10dp"
            android:hint="Address"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14dp" />
        <LinearLayout
            android:id="@+id/addressLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/edittext_background_gray"
                android:hint="country"
                android:layout_weight="1"
                android:inputType="textPostalAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14dp" />
            <TextView
                android:id="@+id/tvState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background_gray"
                android:hint="state"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:inputType="textPostalAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14dp" />
            <TextView
                android:id="@+id/tvCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_background_gray"
                android:hint="city"
                android:layout_weight="1"
                android:inputType="textPostalAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14dp" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>